# MyOwnMesh

./: .gitignore  ARCHITECTURE.md  CONNECTION-ENGINE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASE-SIGNING.md  RELEASE.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/myownmesh/: Cargo.toml  README.md  build.rs
crates/myownmesh-core/: Cargo.toml  README.md
crates/myownmesh-core/examples/: echo_rpc.rs  roster_demo.rs  spin_min.rs  spin_probe.rs  two_peer_chat.rs
crates/myownmesh-core/src/: channels.rs  config.rs  custody.rs  dirs.rs  error.rs  events.rs  handle.rs  identity.rs  lib.rs  network_state.rs  persist.rs  roster.rs  rpc.rs  signing.rs  verification.rs
crates/myownmesh-core/src/engine/: conn_trace.rs  connection.rs  governance.rs  handshake.rs  heartbeat.rs  ice_watchdog.rs  ladder.rs  mod.rs  network_watch.rs  phase.rs  reconcile.rs  reliable.rs  routing.rs  scheduler.rs  signaling_bridge.rs  state.rs  tick.rs  traffic.rs  wake.rs
crates/myownmesh-core/src/protocol/: features.rs  governance.rs  handshake.rs  keepalive.rs  mod.rs  rpc.rs  topology.rs
crates/myownmesh-core/src/services/: mod.rs  relay.rs
crates/myownmesh-core/src/topology/: fullmesh.rs  hubs.rs  mod.rs  ring.rs  star.rs
crates/myownmesh-core/src/transport/: diag.rs  ice.rs  mod.rs  webrtc.rs
crates/myownmesh-core/tests/: cec_support_scale.rs  closed_network_governance.rs  closed_network_roster_guard.rs  corrupt_state_recovery.rs  custody_gate.rs  mdns_signaling.rs  peer_leave.rs  reconnect_in_place.rs  roster_gossip.rs  silent_area_scale.rs  silent_network.rs  two_peer_handshake.rs
crates/myownmesh-services/: Cargo.toml
crates/myownmesh-services/src/: lib.rs  stun.rs  turn.rs
crates/myownmesh-signaling/: Cargo.toml  README.md
crates/myownmesh-signaling/src/: lib.rs  local.rs  server.rs  upstream.rs
crates/myownmesh-signaling/src/mdns/: driver.rs  mod.rs  wire.rs
crates/myownmesh-signaling/src/mdns/discovery/: embedded.rs  mod.rs  system.rs
crates/myownmesh-signaling/src/nostr/: defaults.rs  denylist.rs  driver.rs  event.rs  handle.rs  mod.rs  relay.rs  room.rs  shuffle.rs
crates/myownmesh-signaling/tests/: mdns_driver.rs  signaling_server.rs
crates/myownmesh-updater/: Cargo.toml  README.md
crates/myownmesh-updater/src/: lib.rs  policy.rs
crates/myownmesh/src/: control.rs  embedded.rs  lib.rs  main.rs  registry.rs  services.rs
crates/myownmesh/src/cli/: caddy.rs  config.rs  ctl.rs  gui.rs  identity.rs  mod.rs  serve.rs  service.rs  update.rs
crates/myownmesh/src/ipc/: bridge.rs  clients.rs  mod.rs  wire.rs
docs/: DEBUGGING-CONNECTIONS.md  NANOKVM.md  NETWORK-TYPES.md  PROTOCOL.md  QUICKSTART.md  SERVICES.md
gui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui/src/: identity-portable.ts  main.ts  mesh-client.svelte.ts  network-governance.svelte.ts  network-settings.ts  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: control_client.rs  daemon_spawn.rs  main.rs
gui/src/ui/: App.svelte  NodeMap.svelte  SettingsPanel.svelte  Sidebar.svelte  TopBar.svelte
gui/src/ui/network/: NetworkGovernancePanel.svelte  NetworkKindBadge.svelte  NetworkOverlay.svelte  NetworkOverlayGovernance.svelte  NetworkOverlayRoster.svelte  NetworkOverlaySettings.svelte  NetworkOverlayStatus.svelte  NetworkRosterPanel.svelte  NetworkSettingsPanel.svelte  NetworkStatusPanel.svelte  RoleChip.svelte
gui/src/ui/settings/: AddNetworkModal.svelte  ApprovalsSection.svelte  DiagnosticsSection.svelte  IdentitySection.svelte  NetworksSection.svelte  ServicesSection.svelte  UpdatesSection.svelte
scripts/: bootstrap.ps1  bootstrap.sh  bump-version.sh  install.ps1  install.sh  merge-traces.py
