[package]
name = "myownmesh-core"
description = "Mesh networking runtime, wire protocol, and topology — the only crate embedders need."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "myownmesh_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
