[package]
name = "myownmesh-core"
description = "Mesh networking runtime, wire protocol, and topology — the only crate embedders need."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mesh", "p2p", "webrtc", "ed25519", "topology"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "myownmesh_core"
path = "src/lib.rs"

[dependencies]
myownmesh-signaling = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }

webrtc = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }

ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
