[package]
name = "myownmesh-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Self-hosted STUN / TURN servers for MyOwnMesh."

[dependencies]
myownmesh-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

stun = { workspace = true }
turn = { workspace = true }
webrtc-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
