[package]
name = "myownmesh-signaling"
description = "Nostr signaling for MyOwnMesh, Trystero-wire-compatible."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "myownmesh_signaling"
path = "src/lib.rs"

[dependencies]
myownmesh-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

sha2 = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
