[package]
name = "myownmesh-signaling"
description = "Nostr signaling for MyOwnMesh, Trystero-wire-compatible."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["nostr", "signaling", "webrtc", "trystero", "mesh"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "myownmesh_signaling"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

sha2 = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
