[package]
name = "myownmesh-signaling"
description = "Nostr signaling for MyOwnMesh, Trystero-wire-compatible."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["nostr", "signaling", "webrtc", "trystero", "mesh"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "myownmesh_signaling"
path = "src/lib.rs"

[features]
# Use the platform's own DNS-SD daemon (the `dnssd` C API — mDNSResponder /
# Avahi's compat shim) for mDNS discovery instead of the pure-Rust `mdns-sd`
# sockets. Always on for iOS regardless of this feature (raw multicast is
# entitlement-gated there); opt-in elsewhere, chiefly for verifying the
# backend against Avahi on Linux (links `libdns_sd`:
# `apt install libavahi-compat-libdnssd-dev`).
system-dnssd = []

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

sha2 = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

# The system DNS-SD backend's fd poll loop + sockaddr parsing.
libc = { workspace = true }

# The pure-Rust discovery backend — every target except iOS, where raw
# multicast sockets need an Apple-granted entitlement and the system
# backend (mDNSResponder via `dnssd`) is used instead.
[target.'cfg(not(target_os = "ios"))'.dependencies]
mdns-sd = { workspace = true }
