[package]
name = "myownmesh-updater"
description = "Self-update for MyOwnMesh: configurable release feed, SHA-256 verification, stage-then-apply."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["update", "self-update", "release", "mesh"]
categories = ["development-tools"]

[lib]
name = "myownmesh_updater"
path = "src/lib.rs"

[dependencies]
myownmesh-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
