[package]
name = "myownmesh"
description = "MyOwnMesh daemon and CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mesh", "p2p", "webrtc", "nostr", "daemon"]
categories = ["command-line-utilities", "network-programming"]
# Binary crate, not for crates.io. Distribution path is the GitHub
# Releases matrix (`myownmesh-<platform>.{tar.gz,zip}`); see RELEASE.md.
publish = false

[[bin]]
name = "myownmesh"
path = "src/main.rs"

[dependencies]
myownmesh-core = { workspace = true }
myownmesh-signaling = { workspace = true }
myownmesh-services = { workspace = true }
myownmesh-updater = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
data-encoding = { workspace = true }

interprocess = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }

# `service --system` needs an effective-uid check to fail fast without
# root. Unix-only; the Windows build routes `service` to a manual-setup
# message and never touches libc.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
myownmesh-signaling = { workspace = true }
tempfile = { workspace = true }
