# The GUI's Rust crate lives outside the main Cargo workspace so the
# headless engine's `cargo build --workspace` / `cargo test --workspace`
# stays fast (no Tauri / webview compile). An empty `[workspace]` table
# declares this crate's own (single-member) workspace root.
[workspace]

[package]
name = "myownmesh-gui"
version = "0.2.16"
description = "MyOwnMesh GUI — Tauri shell that talks to the daemon over the control socket."
authors = ["Chris Paul"]
license = "MIT"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "myownmesh-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async runtime — used by the control-socket client + Tauri commands.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }

# Local IPC: matches the daemon's interprocess crate so the
# control-socket address resolution stays identical across the two
# ends of the wire.
interprocess = { version = "2", features = ["tokio"] }

# Wire encoding for the control protocol — line-delimited JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
dirs = "5"
parking_lot = "0.12"

# Logging. Tauri pipes stderr to the dev console / app logs.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
